# string-class

./: .gitignore  .travis.yml  CHANGELOG.md  LICENSE  stack-8.0.yaml  stack-8.10.yaml  string-class.cabal
src/Data/String/: Class.hs
