name:                  string-class
version:               0.1.0
cabal-version:         >= 1.2
build-type:            Simple
license:               BSD3
license-file:          LICENSE
copyright:             Copyright (C) 2010 Byron James Johnson
author:                Byron James Johnson
maintainer:            KrabbyKrap@gmail.com
synopsis:              String class library
description:           String class library
category:              Data
tested-with:           GHC == 6.12.3

library
    hs-source-dirs:    src
    build-depends:     base >= 4 && < 5, bytestring, text
    exposed-modules:   Data.String.Class
    ghc-options:       -Wall
    extensions:        TypeFamilies, FlexibleContexts, TypeSynonymInstances

source-repository head
    type:              darcs
    location:          http://patch-tag.com/r/bob/string-class
