name:                  string-class
version:               0.1.5.2
cabal-version:         >= 1.10
build-type:            Simple
license:               BSD3
license-file:          LICENSE
copyright:             Copyright (C) 2010 Byron James Johnson
author:                Byron James Johnson
maintainer:            ByronJohnsonFP@gmail.com
synopsis:              String class library
description:           String class library
category:              Data, Text
tested-with:           GHC == 7.0.2

library
    default-language:  Haskell2010
    hs-source-dirs:    src
    -- Haven't thoroughly checked version bounds.
    -- I added as the minimum version for each non-base package the most recent
    -- version as of this repository's initial commit.
    build-depends:
      base       >= 4        && < 5
     ,bytestring >= 0.9.1.8  && < 0.11
     ,text       >= 0.11.0.1 && < 1.3
     ,tagged     >= 0.1.1    && < 0.8
    exposed-modules:   Data.String.Class
    ghc-options:       -Wall
    other-extensions:  TypeFamilies, FlexibleContexts, TypeSynonymInstances, ExistentialQuantification, DeriveDataTypeable, FlexibleInstances, UndecidableInstances

source-repository head
    type:              git
    location:          git@github.com:bairyn/string-class.git
